--- a/contents/docs/introduction/index.mdx
+++ b/contents/docs/introduction/index.mdx
@@ -31,9 +31,9 @@ insights into how to structure and present your content effectively.
   />
   <Card
     subtitle="Support"
-    title="Rubix Studios"
+    title="Residents"
     description="Australia's leading branding, marketing and web development company."
-    href="https://www.rubixstudios.com.au/"
+    href="https://www.residents.com.au/"
     external={true}
   />
 </CardGrid>
@@ -77,7 +77,4 @@ use the search bar at the top or the search shortcut (`Ctrl+K` or `Cmd+K`).
 
 Head over to the [Installation Guide](/docs/introduction/installation).
 
-## Join our Community
 
-If you have questions about anything related to Documents, you're always welcome to ask our community on [GitHub](https://github.com/rubixvi/rubix-documents), [X (Twitter)](https://x.com/rubixstory), [Facebook](https://www.facebook.com/rubixstudios) 
-and [Reddit](https://www.reddit.com/r/RubixStudios/).
