--- a/contents/docs/structure/deeper/even-deeper/index.mdx
+++ b/contents/docs/structure/deeper/even-deeper/index.mdx
@@ -30,15 +30,15 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste dolorum te
     variant="small"
   />
   <Card
-    title="Rubix Studios"
-    href="https://www.rubixstudios.com.au"
+    title="Residents"
+    href="https://www.residents.com.au"
     icon="alignJustify"
     external={true}
     variant="small"
   />
   <Card
-    title="Rubix Studios"
-    href="https://www.rubixstudios.com.au"
+    title="Residents"
+    href="https://www.residents.com.au"
     image="/images/og-image.png"
     external={true}
     variant="image"
