--- a/contents/docs/markup/cards/index.mdx
+++ b/contents/docs/markup/cards/index.mdx
@@ -22,8 +22,8 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste dolorum te
     variant="small"
   />
   <Card
-    title="Rubix Studios"
-    href="https://www.rubixstudios.com.au"
+    title="Residents"
+    href="https://www.residents.com.au"
     icon="alignJustify"
     external={true}
     variant="small"
@@ -47,9 +47,9 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste dolorum te
   />
   <Card
     subtitle="Support"
-    title="Rubix Studios"
+    title="Residents"
     description="Australia's leading branding, marketing and web development company."
-    href="https://www.rubixstudios.com.au/"
+    href="https://www.residents.com.au/"
     external={true}
   />
 </CardGrid>
@@ -58,21 +58,21 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste dolorum te
 
 <CardGrid>
   <Card
-    title="Rubix Studios"
-    href="https://www.rubixstudios.com.au"
+    title="Residents"
+    href="https://www.residents.com.au"
     image="/images/og-image.png"
     external={true}
     variant="image"
   />
   <Card
-    title="Rubix Studios"
-    href="https://www.rubixstudios.com.au"
+    title="Residents"
+    href="https://www.residents.com.au"
     image="/images/og-image.png"
     variant="image"
   />
   <Card
-    title="Rubix Studios"
-    href="https://www.rubixstudios.com.au"
+    title="Residents"
+    href="https://www.residents.com.au"
     image="/images/og-image.png"
     variant="image"
   />
