--- a/contents/docs/introduction/installation/index.mdx
+++ b/contents/docs/introduction/installation/index.mdx
@@ -1,167 +1,110 @@
 ---
 title: Installation
-description: This guide covers the installation of Documents and how to edit your new project.
-keywords: ["installation", "github", "node", "guide", "nextjs", "documents"]
+description: Step-by-step guide for installing and setting up your Residents instance.
+keywords: ["installation", "setup", "guide", "getting started", "local development"]
 ---
 
-To install and edit the Documents, you need to have several prerequisites in place. Here's a list of all the essential pre-requisites 
-for setting up and working on this project.
+This section provides a guide on how to install and set up our project on your local machine or server.
 
-[![Deploy with Vercel](https://vercel.com/button)](https://vercel.com/new/clone?repository-url=https%3A%2F%2Fgithub.com%2Fconorluddy%2Fresidents-documents&project-name=my-documents&repository-name=my-documents&demo-title=Documents&demo-description=This%20Document%20Starter%20Kit%20is%20developed%20with%20Next.js%2C%20Tailwind%20CSS%20and%20TypeScript.%20It%20serves%20as%20a%20flexible%20and%20scalable%20foundation%20for%20building%20documentation%20websites%20or%20content-driven%20projects.&demo-url=https%3A%2F%2Fresidents-documents.vercel.app%2F&demo-image=https%3A%2F%2Fgithub.com%2Fconorluddy%2Fresidents-documents%2Fblob%2Fmain%2Fpublic%2Fscreens%2Fscreen-1.png)
+## Getting Started Locally
 
-## Prerequisites
-
-<Step>
-<StepItem title="System Requirements">
-
-  - **Node.js:** Make sure you have Node.js installed. The project uses `npm`, which comes with Node.js. Install Node.js from here.
-  - **NPM or Yarn:** Since the project uses `npm` commands, ensure that npm is installed with Node.js. Alternatively, you can use Yarn if preferred.
-
-To verify installation, run:
-
-  ```bash
-  node -v
-  npm -v
-  ```
-
-</StepItem>
-<StepItem title="Git">
-You need to have Git installed to clone the repository. Download Git from [here](https://git-scm.com/).
-
-  ```bash
-  git --version
-  ```
-
-</StepItem>
-<StepItem title="Code Editor">
-You’ll need a code editor to work on the project. Common options include:
-
-  - [Visual Studio Code](https://code.visualstudio.com/)
-  - [WebStorm](https://www.jetbrains.com/webstorm/)
-  - Any other text editor you prefer.
-
-</StepItem>
-<StepItem title="Required Knowledge">
-- **Next.js:** Since this is a Next.js project, you should be familiar with Next.js basics.
-- **React:** The project uses React, so understanding React's component structure and hooks will help.
-- **TypeScript:** The project is written in TypeScript, so you should have a basic understanding of it.
-- **Tailwind:** The project uses Tailwind CSS for styling.
-- **MDX:** Markdown + JSX (MDX) is used for writing documentation.
-
-</StepItem>
-</Step>
-
-## Installation
+Follow these steps to set up and run the Residents app on your local machine:
 
 <Step>
 <StepItem title="Clone the Repository">
-First, clone the repository to your local machine using Git:
 
-  ```bash
-  git clone https://github.com/conorluddy/residents-documents.git
+  ```
+  git clone https://github.com/conorluddy/Residents
+
+  cd Residents
   ```
 
-Change the directory to the project folder:
+</StepItem><StepItem title="Install Dependencies">
 
-  ```bash
-  cd residents-documents
   ```
-
-</StepItem>
-<StepItem title="Install Dependencies">
-Use npm to install all the required dependencies:
-
-  ```bash
   npm install
   ```
 
-This will install all the dependencies listed in the package.json file, including:
+</StepItem><StepItem title="Set Up Environment Variables">
 
-  - Next.js
-  - React
-  - TypeScript
-  - Tailwind CSS
-  - MDX components
-  - Other dependencies like ESLint, PostCSS, Husky, etc.
+
+- Copy the example environment file:
+
+  ```
+  cp .env.example .env
+  ```
+
+- Open the `.env` file and update the variables with your own values, especially:
+  - Database connection details (POSTGRES)
+  - JWT secret (JWT_TOKEN_SECRET)
+  - Google OAuth credentials (if using Google login)
+  - SendGrid API key (if using email functionality to send invites/reset/magic emails)
 
 </StepItem>
 
-<StepItem title="Running the Development Server">
-Start the development server by running:
+<StepItem title="Set Up the Database">
 
-  ```bash
-  npm run dev
+
+- Ensure you have PostgreSQL installed and running
+- Create a new database matching the POSTGRES_DB in your .env file
+- Initialize the database schema:
+  ```
+  npm run push
+  ```
+</StepItem><StepItem title="Optional: Seed the Database">
+
+To populate the database with sample data:
+```
+npm run seed
+```
+
+To create an initial admin user. This will use the values defined in your .env to set the user details, including the password, of the first user.
+```
+npm run seed:owner
+```
+
+
+</StepItem><StepItem title="Start the Development Server">
+
+  ```
+  npm run dev  
   ```
 
-This will start the local server, and you can open your browser at:
+</StepItem><StepItem title="Access the API">
 
-  ```arduino
-  http://localhost:3000
+- The API should now be running on `http://localhost:3000` (or the port specified in your .env file)
+- Swagger API documentation is available at `http://localhost:3000/api-docs`
+- Swagger/OpenAPI as JSON is available at `http://localhost:3000/api-json`
+</StepItem><StepItem title="Running Tests">
+
+    ```
+    npm test
+    ```
+
+</StepItem><StepItem title="Using Docker (Optional)">
+
+If you prefer to use Docker:
+- Ensure Docker is installed on your system
+- Run:
   ```
-
-</StepItem>
-
-<StepItem title="Editing the Project">
-  - **MDX Files:** Documentation content is stored in `contents/docs`.
-  - **Components:** You can edit React components in the `components/` directory.
-  - **Tailwind:** Tailwind styling are managed in `tailwind.config.ts` and `app/globals.css`.
-
-To make any changes to the project, open the files in your editor and modify them as needed.
-
-
-<Note title="Required" type="danger">
-  The project's search functionality relies on the Husky's automation to build `search-data/documents.json` ensure git commit is performed to generate this file.
-</Note>
-
-
-</StepItem>
-<StepItem title="Building for Production">
-Once you’ve made your changes and want to build the project for production:
-
-  ```bash
-  npm run build
+  docker-compose up
   ```
-
-This will generate a production-ready build of the app.
-
-</StepItem>
-<StepItem title="Running Production Server">
-To run the production server:
-
-  ```bash
-  npm run start
-  ```
-
-The production app will be available at:
-
-  ```arduino
-  http://localhost:3000
-  ```
+This will start both the PostgreSQL database and the application in containers.
 
 </StepItem>
 </Step>
 
-## Optional
-<Step>
-<StepItem title="Deploying to Vercel">
-This project is optimized for Vercel deployment. To deploy to Vercel:
+## Additional Notes
 
-  - Go to [vercel.com](https://vercel.com/) and sign up.
-  - Link your GitHub repository and deploy the project.
-  - Vercel will handle the build process for you automatically.
+- For Google authentication, ensure you've set up a Google Developer account and obtained the necessary credentials.
+- For email functionality (password resets, etc.), make sure you've set up a SendGrid account and verified your sender email.
+- The application uses various environment variables for configuration. Refer to the `.env.example` file for all required variables.
+- TypeScript is used for development. The `npm run build` command compiles the TypeScript code to JavaScript.
 
-The production app will be available at:
+## Troubleshooting
 
-  ```bash
-  http://localhost:3000
-  ```
+- If you encounter any database connection issues, double-check your PostgreSQL settings and ensure the service is running.
+- For any dependency-related errors, try deleting the `node_modules` folder and running `npm install` again.
+- Ensure all required environment variables are properly set in your `.env` file.
 
-</StepItem>
-<StepItem title="Linting and Pre-commit Hooks">
-The project uses ESLint for linting and Husky for Git hooks. These tools are configured automatically, but you can customize them in `.eslintrc.json` and `.husky` directories.
-</StepItem>
-</Step>
-
-## Important Information
-
-The project's search functionality relies on the Husky's automation to build `search-data/documents.json` ensure git commit is performed to generate this file.
+For more detailed information on the project structure, available API endpoints, and future development plans, refer to the full README in the project repository.
