--- a/contents/docs/dependencies/index.mdx
+++ b/contents/docs/dependencies/index.mdx
@@ -1,16 +1,16 @@
 ---
-title: Stack Dependencies and Prerequisites
-description: Overview of the technology stack, dependencies, and prerequisites for our project
+title: Dependencies
+description: This section outlines the technology stack, dependencies, and prerequisites required for setting up and running Residents.
 keywords: ["stack", "dependencies", "prerequisites", "requirements"]
 ---
 
-This section outlines the technology stack, dependencies, and prerequisites required for setting up and running our project.
+
 
 Before setting up and running the Residents app, ensure you have the following prerequisites installed and configured:
 
 1. **Node.js**: The application is built with Node.js. Make sure you have Node.js installed (version 18.x or later recommended).
 
-2. **PostgreSQL**: A PostgreSQL database is required. Ensure you have PostgreSQL installed and running, or access to a PostgreSQL instance.
+2. **PostgreSQL**: A PostgreSQL database is required. Ensure you have PostgreSQL installed and running, or access to a PostgreSQL instance. Other relational databases could easily be used instead with some minor modifications.
 
 3. **npm**: The Node.js package manager is used for managing dependencies. It's typically installed with Node.js.
 
