--- a/contents/docs/markup/cards/index.mdx
+++ b/contents/docs/markup/cards/index.mdx
@@ -23,7 +23,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste dolorum te
   />
   <Card
     title="Residents"
-    href="https://www.residents.com.au"
+    href="https://www.residents.rest"
     icon="alignJustify"
     external={true}
     variant="small"
@@ -49,7 +49,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste dolorum te
     subtitle="Support"
     title="Residents"
     description="Australia's leading branding, marketing and web development company."
-    href="https://www.residents.com.au/"
+    href="https://www.residents.rest/"
     external={true}
   />
 </CardGrid>
@@ -59,20 +59,20 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste dolorum te
 <CardGrid>
   <Card
     title="Residents"
-    href="https://www.residents.com.au"
+    href="https://www.residents.rest"
     image="/images/og-image.png"
     external={true}
     variant="image"
   />
   <Card
     title="Residents"
-    href="https://www.residents.com.au"
+    href="https://www.residents.rest"
     image="/images/og-image.png"
     variant="image"
   />
   <Card
     title="Residents"
-    href="https://www.residents.com.au"
+    href="https://www.residents.rest"
     image="/images/og-image.png"
     variant="image"
   />
