--- a/contents/docs/structure/deeper/even-deeper/index.mdx
+++ b/contents/docs/structure/deeper/even-deeper/index.mdx
@@ -31,14 +31,14 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste dolorum te
   />
   <Card
     title="Residents"
-    href="https://www.residents.com.au"
+    href="https://www.residents.rest"
     icon="alignJustify"
     external={true}
     variant="small"
   />
   <Card
     title="Residents"
-    href="https://www.residents.com.au"
+    href="https://www.residents.rest"
     image="/images/og-image.png"
     external={true}
     variant="image"
