More quick start docs

--- a/contents/docs/installation/index.mdx
+++ b/contents/docs/installation/index.mdx
@@ -64,7 +64,8 @@ npm run seed:owner
 ```
 
 
-</StepItem><StepItem title="Start the Development Server">
+</StepItem>
+<StepItem title="Start the Development Server">
 
   ```
   npm run dev  
