Quick start note

--- a/contents/docs/quick-start/index.mdx
+++ b/contents/docs/quick-start/index.mdx
@@ -106,6 +106,7 @@ Pre-configured project structures that can be easily cloned and customized. Not 
 
 ## NPM install
 
+*Note: This is incomplete at the moment, I need to fix some dependency issues and make it play a bit nicer. Coming soon...*
 
 A full Express app as a module. Drop Residents into an existing Express app to add user and auth routes. 
 
